# galileo

./: .gitignore  Makefile  README.md  docker-compose.yml
galileo-analyzer/: pyproject.toml
galileo-analyzer/src/galileo_analyzer/analyzers/deep/: __init__.py  ai_recommender.py  code_analyzer.py  deep_scanner.py  dependency_analyzer.py  performance_analyzer.py
galileo-analyzer/src/galileo_analyzer/analyzers/inventory/: categorizer.py  scanner.py
galileo-analyzer/src/galileo_analyzer/analyzers/static/: quick_analyzer.py
galileo-analyzer/src/galileo_analyzer/cli/: analyze.py  inventory.py  main.py
galileo-analyzer/src/galileo_analyzer/core/: config.py  exceptions.py  models.py
galileo-analyzer/src/galileo_analyzer/providers/: base.py  factory.py
galileo-analyzer/src/galileo_analyzer/providers/aws/: glue.py
galileo-analyzer/src/galileo_analyzer/providers/databricks/: connector.py
galileo-analyzer/src/galileo_analyzer/providers/snowflake/: connector.py
galileo-analyzer/src/galileo_analyzer/reporting/: cost_calculator.py  formatters.py
galileo-analyzer/src/galileo_analyzer/utils/: aws_utils.py  logger.py  validators.py
galileo-web/: Dockerfile
galileo-web/app/views/layouts/: application.html.erb
galileo-web/app/views/pwa/: manifest.json.erb
galileo-web/config/: application.rb  credentials.yml.enc  deploy.yml
