[project]
name = "galileo-analyzer"
version = "0.1.0"
description = ""
authors = [
    {name = "Demetrius Albuquerque",email = "demetrius.albuquerque@yahoo.com.br"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
]

[tool.poetry]
packages = [{include = "galileo_analyzer", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
