[project]
name = "galileo-analyzer"
version = "0.1.0"
description = "Intelligent Data Jobs Analyzer for Multi-Cloud Environments"
authors = [
    {name = "Demetrius Albuquerque", email = "demetrius.albuquerque@yahoo.com.br"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.34.0",
    "botocore>=1.34.0", 
    "click>=8.2.1",
    "pydantic>=2.11.7",
    "PyYAML>=6.0.1",
    "tabulate>=0.9.0",
    "rich>=14.1.0",
    "pandas>=2.1.0",
    "openpyxl>=3.1.0"
]

# CLI entry points - This makes the commands work!
[project.scripts]
galileo = "galileo_analyzer.cli.main:main"
galileo-inventory = "galileo_analyzer.cli.inventory:main"
galileo-analyze = "galileo_analyzer.cli.analyze:main"

# Optional dependencies
[project.optional-dependencies]
static-analysis = ["semgrep>=1.45.0", "bandit>=1.7.5"]
ai = ["openai>=1.6.0"]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=6.3.0", 
    "black>=25.1.0",
    "flake8>=7.3.0",
    "mypy>=1.8.0",
    "isort>=6.0.1"
]
all = ["semgrep>=1.45.0", "bandit>=1.7.5", "openai>=1.6.0"]

[tool.poetry]
packages = [{include = "galileo_analyzer", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"